--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <div class="content1">
                     <fieldset class="fieldset-option" style="margin-left: 0px;">
                         <div>
+
                             <label for="sendMessage" style="display: inline-block;">Stake Username:</label>
                             <div id="sendMessage" contenteditable="false" style="display: inline-block;"></div>
                             <span class="dash"> - </span>
@@ -86,9 +87,13 @@
                             <button id="tipxlate">Tip Xlate </button>
                             <span id="111"></span>
                             <span id="112"></span>
+                            <div id="myProgress">
+                                <div id="myBar"></div>
+                            </div>
                             <span id="113"></span>
                             <span id="114"></span>
                             <span id="115"></span>
+                            <span id="116"></span>
                         </div>
                     </fieldset>
                 </div>
