--- a/index1.html
+++ b/index1.html
@@ -10,61 +10,61 @@
             background-color: #1a2c38;
             color: #ffffff;
             font-family: "DejaVu Sans", Arial, sans-serif;
-            font-size: 11pt; /* Adjusted font size */
-            margin: 50px auto 0; /* Added margin-top: 50px */
+            font-size: 11pt;
+            margin: 50px auto 0;
             width: 100%;
             display: flex;
-            justify-content: center; /* Center horizontally */
-            align-items: center; /* Center vertically */
+            justify-content: center;
+            align-items: center;
         }
 
         .container {
-            margin-bottom: 20px; /* Added margin-bottom: 20px */
+            margin-bottom: 20px;
         }
 
         .center-image {
             display: block;
-            margin: 0 auto 20px; /* Adjusted margin */
+            margin: 0 auto 20px;
         }
 
         button {
             margin-top: 20px;
-            padding: 5px 15px; /* Adjusted padding */
+            padding: 5px 15px;
             cursor: pointer;
             margin-bottom: 20px;
         }
 
         h1 {
-            font-family: proxima-nova, sans-serif; /* Changed font */
-            font-size: 20px; /* Adjusted font size */
-            max-width: 330px; /* Added max-width */
-            margin: 0 auto 20px; /* Added margin */
+            font-family: proxima-nova, sans-serif;
+            font-size: 20px;
+            max-width: 330px;
+            margin: 0 auto 20px;
         }
 		
 
         h2 {
-            font-family: proxima-nova, sans-serif; /* Changed font */
-            font-size: 14px; /* Adjusted font size */
-            max-width: 400px; /* Added max-width */
-            margin: 0 auto 20px; /* Added margin */
+            font-family: proxima-nova, sans-serif;
+            font-size: 14px;
+            max-width: 400px;
+            margin: 0 auto 20px;
         }
 		
 		h5 {
-            font-size: 10px; /* Adjusted font size */
-            max-width: 600px; /* Added max-width */
-            margin: 0 auto 20px; /* Added margin */
+            font-size: 10px;
+            max-width: 600px;
+            margin: 0 auto 20px;
             color: #159e25;
         }
 		h6 {
-            font-size: 11px; /* Adjusted font size */
-            max-width: 600px; /* Added max-width */
-            margin: 0 auto 20px; /* Added margin */
+            font-size: 11px;
+            max-width: 600px;
+            margin: 0 auto 20px;
             color: #e4d4d4;
         }
 
         a {
-            color: rgb(4, 170, 24); /* Change the color of the hyperlink */
-            text-decoration: none; /* Remove underline from the hyperlink */
+            color: rgb(4, 170, 24);
+            text-decoration: none;
         }
     .container .content2 .container p {
 	font-family: Gotham, Helvetica Neue, Helvetica, Arial, sans-serif;
